[package]
name = "glue"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
nom = "7.1.3"
parking_lot = "0.12.2"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serialport = "4.3.0"
